Fixed responsiveness issue + spacing

--- a/App/style.css
+++ b/App/style.css
@@ -20,8 +20,10 @@
 
 body {
   background-color: var(--clr-red);
-  max-width: 768px;
+  height: 100vh;
+  max-width: 760px;
   margin: 0 auto;
+  position: relative;
 }
 
 /* Header style */
@@ -122,7 +124,6 @@ header {
   height: 25px;
   width: 100%;
   background-color: white;
-  border-top: 1px solid var(--clr-black);
   text-align: center;
 
   position: absolute;
@@ -169,5 +170,30 @@ header {
 
   .time-container {
     font-size: 2.5em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+
+  header {
+    font-size: 1.2em;
+  }
+  
+  .time-container {
+    font-size: 3.5em;
+  }
+
+  .button-container {
+    scale: 1.5;
+    margin-top: 175px;
+  }
+
+  .selection-container {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+
+  .selection-container ul li {
+    margin: 0 15px;
   }
 }
